@@ -1,4 +1,5 @@
 Added support for Members version 2.0+; moved the capabilities to a new Gravity Flow group with human readable labels.
+Added the gravityflow_step_assignees filter.
 Fixed an issue populating multi-select fields with the existing entry value on the user input step when the field uses the new json storageType.
 Fixed the $original_entry parameter not being passed when the gform_after_update_entry hook is triggered on entry update by the user input step.
 Fixed empty fields being displayed on the user input step when 'show empty fields' was not enabled.
